--- a/shopply/templates/interpreter/install.html
+++ b/shopply/templates/interpreter/install.html
@@ -20,7 +20,7 @@
 <body>
 
 
-<a href="http://realtech.webfactional.com/media/demo_toolbar.xpi"
+<a href="http://realtech.webfactional.com/media/sltoolbar.xpi"
   onclick="return install(event);">Install Extension for Firefox!</a>
 
 </body>
